--- a/styles.css
+++ b/styles.css
@@ -79,3 +79,8 @@ a:hover {
   color: rgba(255,255, 255, 0.7);
   text-decoration: none;
 }
+
+.shape {
+  shape-outside: polygon(10px 10px, 20px 20px, 30px 30px, 40px, 40px);
+  background-color: red;
+}
