--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,6 @@ body {
 
 .text {
   font-size: 22px;
-  font
   text-decoration: none;
   text-align: center;
   position: relative;
@@ -36,7 +35,7 @@ body {
   padding-bottom: 8px;
 }
 
-.hexagon {
+.home-hexagon {
   position: relative;
   width: 400px;
   height: 230.94px;
@@ -47,7 +46,7 @@ body {
   margin-top: 20%;
 }
 
-.hexagon:before, .hexagon:after {
+.home-hexagon:before, .home-hexagon:after {
   content: "";
   position: absolute;
   width: 0;
@@ -55,12 +54,12 @@ body {
   border-right: 200px solid transparent;
 }
 
-.hexagon:before {
+.home-hexagon:before {
   bottom: 100%;
   border-bottom: 115.47px solid rgba(191, 85, 236, 0.6);
 }
 
-.hexagon:after {
+.home-hexagon:after {
   top: 100%;
   width: 0;
   border-top: 115.47px solid rgba(191, 85, 236, 0.6);
@@ -80,7 +79,133 @@ a:hover {
   text-decoration: none;
 }
 
-.shape {
-  shape-outside: polygon(10px 10px, 20px 20px, 30px 30px, 40px, 40px);
-  background-color: red;
+.hexgrid { 
+  margin-top: 15%;
+  display: none;
+  position: relative;
 }
+
+#grid {
+    position: relative;
+    width: 600px;
+    margin: 0 auto;
+    padding: 0;
+}
+
+.clear:after {
+    content: "";
+    display: block;
+    clear: both;
+}
+
+#grid li .hexagon {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(191, 85, 236, 0.6);
+    -o-transform: skewY(-30deg) rotate(60deg);
+    -moz-transform: skewY(-30deg) rotate(60deg);
+    -webkit-transform: skewY(-30deg) rotate(60deg);
+    -ms-transform: skewY(-30deg) rotate(60deg);
+    transform: skewY(-30deg) rotate(60deg);
+    overflow: hidden;
+}
+
+#grid li {
+    list-style-type: none;
+    position: relative;
+    float: left;
+    width: 27.85714285714286%;
+    padding: 0 0 32.16760145166612% 0;
+    -o-transform: rotate(-60deg) skewY(30deg);
+    -moz-transform: rotate(-60deg) skewY(30deg);
+    -webkit-transform: rotate(-60deg) skewY(30deg);
+    -ms-transform: rotate(-60deg) skewY(30deg);
+    transform: rotate(-60deg) skewY(30deg);
+    overflow: hidden;
+    visibility: hidden;
+}
+
+#grid li:nth-child(1) {
+  /*display: none;*/
+}
+
+#grid li:nth-child(7) {
+  display: none;
+}
+#grid li:nth-child(8) {
+  display: none;
+}
+#grid li:nth-child(9) {
+  display: none;
+}
+
+#grid li * {
+  visibility: visible;
+}
+
+#grid li:nth-child(3n+2) {
+  margin: 0 1%;
+}
+
+#grid li:nth-child(6n+4), #grid li:nth-child(6n+5), #grid li:nth-child(6n+6) {
+  margin-top: -6.9285714285%;
+  margin-bottom: -6.9285714285%;
+  -o-transform: translateX(50%) rotate(-60deg) skewY(30deg);
+  -moz-transform: translateX(50%) rotate(-60deg) skewY(30deg);
+  -webkit-transform: translateX(50%) rotate(-60deg) skewY(30deg);
+  -ms-transform: translateX(50%) rotate(-60deg) skewY(30deg);
+  transform: translateX(50%) rotate(-60deg) skewY(30deg);
+}
+#grid li:nth-child(6n+4) { 
+  margin-left: 0.5%;
+}
+
+span.text.nav {
+  position: absolute;
+  margin-left: -15px;
+  margin-top: -15px;
+}
+
+#grid li .hexagon img {
+  left:-100%;
+  right:-100%;
+  height:100%;
+  width: auto;
+  margin: 0 auto;
+  -o-transition: all 0.6s linear 0s; 
+  -moz-transition: all 0.6s linear 0s; 
+  -ms-transition: all 0.6s linear 0s; 
+  -webkit-transition: all 0.6s linear 0s; 
+  transition: all 0.6s linear 0s;
+}
+
+#grid li:hover img {
+  height: 150%;
+  -o-transform: translateZ(0) translateX(-25%);
+  -moz-transform: translateZ(0) translateX(-25%);
+  -webkit-transform: translateZ(0) translateX(-25%);
+  -ms-transform: translateZ(0) translateX(-25%);
+  transform: translateZ(0) translateX(-25%);
+}
+
+#grid li .hexagon .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: rgba(255,255,255,0);
+}
+
+#grid li:hover .overlay {
+  -o-transition: all 0.6s linear 0s; 
+  -moz-transition: all 0.6s linear 0s; 
+  -ms-transition: all 0.6s linear 0s; 
+  -webkit-transition: all 0.6s linear 0s; 
+  transition: all 0.6s linear 0s;
+  background: rgba(255,255,255,0.6);
+}
+
